refactor: 예외 상황 테스트 작성